--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
   <title></title>
+  <meta charset="utf-8">
+  <link href="static/css/main.css" rel="stylesheet">
 </head>
 <body>
-  test page
+  测试一下
+jquery.min.js
 </body>
 </html>
